# flexknot

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
flexknot/: __init__.py  core.py  flexknots.py  helper_functions.py  likelihoods.py  priors.py  utils.py
linf/: __init__.py  helper_functions.py  likelihoods.py  linfs.py  priors.py
linfs/: likelihoods.py
src/: __init__.py  likelihoods.py  linf.py  linfs.py
tests/: test_adaptive_linf.py  test_area.py  test_create_theta.py  test_flexknot.py  test_get_theta_n.py  test_helper_functions.py  test_likelihood.py  test_linf.py  test_prior.py  test_utils.py
