[project]
name = "flexknot"
version = "1.3.0"
description = "Flex-Knot"
authors = [{name="Adam Neil Ormondroyd", email="Adam.Ormondroyd@gmail.com"}]
readme = "README.md"
dependencies = ["numpy", "scipy", "pypolychord"]

[project.urls]
repository = "https://github.com/adamormondroyd/flexknot"

[project.optional-dependencies]
dev = ["pytest", "flake8", "pydocstyle"]
