[project]
name = "flexknot"
dynamic = ["version"]
description = "Flex-Knot"
authors = [{name="Adam Neil Ormondroyd", email="Adam.Ormondroyd@gmail.com"}]
readme = "README.md"
dependencies = ["numpy", "scipy", "pypolychord"]

[project.urls]
repository = "https://github.com/adamormondroyd/flexknot"

[project.optional-dependencies]
dev = ["pytest", "flake8", "pydocstyle"]

[build-system]
requires = ["setuptools_scm>=8"]

[tool.setuptools_scm]
version_file = "flexknot/_version.py"
